shared/src/test/data/yeast/invalid-json/bad-indicator-after-seq.jyt
BeginDocument       0,  1,  0 ''
BeginSequence       0,  1,  0 '['
BeginMapping        1,  1,  1 '{'
BeginScalar         2,  1,  2 ''
Indicator           2,  1,  2 '\"'
Text                3,  1,  3 'ID'
Indicator           5,  1,  5 '\"'
EndScalar           6,  1,  6 ''
Indicator           6,  1,  6 ':'
BeginScalar         7,  1,  7 ''
Text                7,  1,  7 '1'
EndScalar           8,  1,  8 ''
Indicator           8,  1,  8 ','
WhiteSpace          9,  1,  9 ' '
BeginScalar        10,  1, 10 ''
Indicator          10,  1, 10 '\"'
Text               11,  1, 11 'code'
Indicator          15,  1, 15 '\"'
EndScalar          16,  1, 16 ''
Indicator          16,  1, 16 ':'
WhiteSpace         17,  1, 17 ' '
BeginScalar        18,  1, 18 ''
Indicator          18,  1, 18 '\"'
Text               19,  1, 19 'ER38sd'
Indicator          25,  1, 25 '\"'
EndScalar          26,  1, 26 ''
Indicator          26,  1, 26 ','
BeginScalar        27,  1, 27 ''
Indicator          27,  1, 27 '\"'
Text               28,  1, 28 'price'
Indicator          33,  1, 33 '\"'
EndScalar          34,  1, 34 ''
Indicator          34,  1, 34 ':'
WhiteSpace         35,  1, 35 ' '
BeginScalar        36,  1, 36 ''
Text               36,  1, 36 '400'
EndScalar          39,  1, 39 ''
EndMapping         39,  1, 39 '}'
Indicator          40,  1, 40 ','
WhiteSpace         41,  1, 41 ' '
BeginMapping       42,  1, 42 '{'
BeginScalar        43,  1, 43 ''
Indicator          43,  1, 43 '\"'
Text               44,  1, 44 'ID'
Indicator          46,  1, 46 '\"'
EndScalar          47,  1, 47 ''
Indicator          47,  1, 47 ':'
BeginScalar        48,  1, 48 ''
Text               48,  1, 48 '2'
EndScalar          49,  1, 49 ''
Indicator          49,  1, 49 ','
BeginScalar        50,  1, 50 ''
Indicator          50,  1, 50 '\"'
Text               51,  1, 51 'code'
Indicator          55,  1, 55 '\"'
EndScalar          56,  1, 56 ''
Indicator          56,  1, 56 ':'
WhiteSpace         57,  1, 57 ' '
BeginScalar        58,  1, 58 ''
Indicator          58,  1, 58 '\"'
Text               59,  1, 59 'ER45if'
Indicator          65,  1, 65 '\"'
EndScalar          66,  1, 66 ''
Indicator          66,  1, 66 ','
WhiteSpace         67,  1, 67 ' '
BeginScalar        68,  1, 68 ''
Indicator          68,  1, 68 '\"'
Text               69,  1, 69 'price'
Indicator          74,  1, 74 '\"'
EndScalar          75,  1, 75 ''
Indicator          75,  1, 75 ':'
WhiteSpace         76,  1, 76 ' '
BeginScalar        77,  1, 77 ''
Text               77,  1, 77 '345.99'
EndScalar          83,  1, 83 ''
EndMapping         83,  1, 83 '}'
EndSequence        84,  1, 84 ']'
Indicator          85,  1, 85 ':'